[tool.poetry]
name = "FlymasterPy"
version = "0.1.0"
description = ""
authors = ["S. Co1 <sco1.git@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
pandas = "^1.3"
openpyxl = "^2.6"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bump2version = "^1.0"
flake8 = "^3.8"
flake8-annotations = "^2.6"
flake8-bugbear = "^21.4"
flake8-docstrings = "^1.6"
flake8-fixme = "^1.1"
flake8-import-order = "^0.18"
flake8-tidy-imports = "^4.1"
mypy = "^0.910"
pep8-naming = "^0.12"
pre-commit = "^2.13"

[tool.black]
line-length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
